chore: several component tweaks

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": {
     "name": "CheetahJS",
-    "email": "enquries@cheetahjs.com"
+    "email": "git@cheetahjs.com"
   },
   "bugs": "https://github.com/cheetahjs-com/cheetahjs-svelte/issues",
   "homepage": "https://cheetahjs.com/",
